# health-fact-checker

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
.next/: trace
.next/cache/webpack/client-development/: index.pack.gz.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @swc.js  @ungap.js  asynckit.js  axios.js  bail.js  call-bind-apply-helpers.js  character-entities.js  combined-stream.js  comma-separated-tokens.js  debug.js  decode-named-character-reference.js  delayed-stream.js  dequal.js  devlop.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  estree-util-is-identifier-name.js  extend.js  follow-redirects.js  form-data.js  function-bind.js  get-intrinsic.js  get-proto.js  gopd.js  has-flag.js  has-symbols.js  has-tostringtag.js  hasown.js  hast-util-to-jsx-runtime.js  hast-util-whitespace.js  html-url-attributes.js  inline-style-parser.js  is-plain-obj.js  lucide-react.js  math-intrinsics.js  mdast-util-from-markdown.js  mdast-util-to-hast.js  (+44 more)
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/chunks/app/: layout.js  page.js
.next/static/css/app/: layout.css
.next/static/development/: _buildManifest.js
.next/static/webpack/: webpack.e892975015af8ea6.hot-update.js
.next/static/webpack/app/: layout.e892975015af8ea6.hot-update.js
.next/types/app/: layout.ts  page.ts
api/: main.py
app/: globals.css  layout.tsx  page.tsx
app/components/: ChatInterface.tsx  Header.tsx
scripts/: deploy.sh  dev.sh
